--- a/style.css
+++ b/style.css
@@ -3,18 +3,29 @@
 body {
     min-height: 100vh;
     background-color: #ffe99b;
-    
+    padding: 0px;
+    margin: 0px;
+    flex-direction: column;
+    display: flex;
+}
+
+body.veldvoetbal {
+  background-color: #798480;
+}
+
+body.zaalvoetbal {
+  background-color: #ffb885;
 }
 
 .header {
-    margin: 0px;
+    margin: 50px;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px 120px;
     background: #444a48;
     display: flex;
     justify-content: space-between;
@@ -22,50 +33,102 @@ body {
     z-index: 100;
 }
 
-.logo {
-    font-size: 32px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
+header.team {
+  color: #f7cb46;
 }
 
-.navbar a {
-    position: relative;
-    font-size: 18px;
-    color: #fff;
-    font-weight: 500;
-    text-decoration: none;
-    margin-left: 40px;
+header.intro img {
+border: none;
 }
 
-.navbar a::before {
-    content: '';
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 0;
-    height: 2px;
-    background: #f3791f;
-
+section.veldvoetbal img {
+  display: block; 
+  margin-left: auto; 
+  margin-top: -100px;
+  padding-top: 0px;
+  flex-shrink: 0;
+  margin-right: 40px;
+  border: 10px solid #444a48;
 }
 
-.navbar a:hover::before {
-    width: 100%;
+section.teamfoto img { 
+display: block; 
+margin-left: auto; 
+margin-top: -400px;
+padding-top: 0px;
+flex-shrink: 0;
+margin-right: 40px;
+border: 10px solid #444a48;
 }
+
+ul.programmaveldvoetbal {
+  margin-top: -220px;
+  margin-bottom: 100px;
+  list-style: none;
+  margin-left: -40px;
+  color: #fff;
+}
+
+p.overhetteam {
+  max-width: 750px;
+  color: #fff;
+  }
+
+
+nav {
+    background-color: #444a48; 
+    padding: 25px; 
+    margin: 0px; 
+  }
+
+  ul img {
+    margin-right: 20px; 
+  }
+  
+  nav ul {
+    list-style: none; 
+    padding: 20; 
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline; 
+    margin-left: 175px;
+    margin-right: 10px; 
+    justify-content: flex-end; 
+  }
+
+  nav a {
+    color: white; 
+    text-decoration: none; 
+    margin-right: 10px; 
+    position: relative; 
+  }
+  
+  nav a:hover {
+    border-bottom: 2px solid #f3791f; 
+  }
+
+
+html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 footer {
     background-color: #444a48; 
-    left: 0;
     color: #fff; 
-    margin: 0px;
-    position: fixed;
-    bottom: 0;
     width: 100%;
+
 }
 
 img {
 margin-left: 50px;
+border: 10px solid #444a48;
 }
+
 
 h1 {
     background-color: #f3791f;
@@ -73,15 +136,13 @@ h1 {
     padding-right: 10px;
     padding-bottom: 10px;
     padding-top: 10px;
-    margin: 200px; 
+    margin: 37px; 
     margin-left: 30px;
     margin-bottom: 5px;
     text-align: left; 
     width: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #fff;
-      
-
 }
 
 h2 {
@@ -130,7 +191,8 @@ p {
     font-size: 11pt;
 }
 
-li {
+
+ul li {
     margin: 40px;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -139,4 +201,33 @@ li {
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 11pt;
+  
 }
+
+ul.teamleden {
+  margin-left: -20px;
+  list-style: none;
+}
+
+ul.coaches {
+  text-align: right;
+  margin-left: -20px;
+  list-style: none;
+}
+
+ul.zaalvoetballeden {
+  margin-left: -20px;
+  list-style: none;
+}
+
+ul.zaalvoetbalcoaches {
+  margin-left: -20px;
+  list-style: none;
+}
+
+
+
+
+
+
+
